# stockus-be

./: .gitignore  README.md  chill-stock-fe.code-workspace  keepalive.yml  llm.py  main.py  package-lock.json  package.json  pyproject.toml  scrap.py  supabase_client.py
.github/workflows/: keepalive.yml  scrap.yml
app/routers/: llm.py  market.py  reddit.py  scrap.py
app/services/: __init__.py  llm.py  market.py  reddit.py  scrap.py
