[project]
name = "chill-stock-be"
version = "0.1.0"
description = ""
authors = [
    {name = "minzunim",email = "greenteapig6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "gspread (>=6.2.0,<7.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "openai (>=1.72.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "chill_stock_be", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
