[project]
name = "stockus-be"
version = "0.1.0"
description = ""
authors = [
    {name = "minzunim",email = "greenteapig6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "gspread (>=6.2.0,<7.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "openai (>=1.72.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "konlpy (>=0.6.0,<0.7.0)",
    "curl-cffi (>=0.11.4,<0.12.0)",
    "supabase (>=2.16.0,<3.0.0)"
]

[tool.poetry]
name = "chill-stock-be"
version = "0.1.0"
description = "FastAPI 주식 브리핑 API"
authors = ["minzunim <greenteapig6@gmail.com>"]
readme = "README.md"
packages = [{ include = "chill_stock_be", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12, <4.0"
fastapi = {extras = ["standard"], version = ">=0.115.12,<0.116.0"}
uvicorn = ">=0.34.0,<0.35.0"
httpx = ">=0.28.1,<0.29.0"
yfinance = ">=0.2.65,<0.3.0"
gspread = ">=6.2.0,<7.0.0"
oauth2client = ">=4.1.3,<5.0.0"
openai = ">=1.72.0,<2.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
konlpy = ">=0.6.0,<0.7.0"
supabase = ">=2.16.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
